// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-customer-email is disabled when logged in 1`] = `
<sc-customer-email logged-in="" size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="email" disabled="" exportparts="base, input, form-control, label, help-text, prefix, suffix" help="" name="email" required="" type="email" value=""></sc-input>
  </mock:shadow-root>
</sc-customer-email>
`;

exports[`sc-customer-email renders 1`] = `
<sc-customer-email size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="email" exportparts="base, input, form-control, label, help-text, prefix, suffix" help="" name="email" required="" type="email" value=""></sc-input>
  </mock:shadow-root>
</sc-customer-email>
`;
